...
        tools:layout_editor_absoluteY="541dp" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="username"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="99dp"
...
        android:textSize="13dp"

        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="284dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/textView3"
        android:text="SignUP"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="539dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="cursive"
        android:paddingLeft="40dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="87dp" />

    <Button
...
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="Next Gen Library"
        android:textColor="@color/black"
        android:textSize="40dp" />

</RelativeLayout>
